<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#101336">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bmi_text"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/card_background"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:cardElevation="16dp"
        android:layout_marginBottom="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/mediumGap"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_text_weight"
                    android:textSize="48sp"
                    android:textColorHint="#767b8e"
                    android:textColor="@color/white"
                    android:inputType="numberDecimal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/measure_unit_weight"
                    android:textColor="@color/white"
                    android:textSize="32sp"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/card_background"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:cardElevation="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/height_hint_text"
                android:textSize="48sp"
                android:textColorHint="#767b8e"
                android:inputType="numberDecimal"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/measure_unit_height"
                android:textColor="@color/white"
                android:textSize="32sp"/>
        </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button_text"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="#FF0062"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/card_background"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:cardElevation="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/resultText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:text=""
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:textColor="@color/white"

                />
            <TextView
                android:id="@+id/resultText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text=""
                android:layout_gravity="center"
                android:textColor="@color/white"
              />
            <TextView
                android:id="@+id/resultText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="8sp"
               />
        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>